Add AStar pathfinding

--- a/astar.ini
+++ b/astar.ini
@@ -1,5 +1,5 @@
 [Visual]
-Cell_Size = 300
+Cell_Size = 120
 Speed = 2
 
 [Colours]
@@ -7,3 +7,4 @@ EMPTY = 255,255,255
 WALL = 0,0,0
 PLAYER = 255,0,0
 GOAL = 0,0,255
+VISITED = 255,230,230
