--- a/astar.ini
+++ b/astar.ini
@@ -1,6 +1,6 @@
 [Visual]
 Size = 500
-Speed = 6
+Speed = 20
 
 [Colours]
 EMPTY = 255,255,255
@@ -8,5 +8,5 @@ WALL = 0,0,0
 PLAYER = 255,0,0
 GOAL = 0,0,255
 VISITED = 255,230,230
-OPTIMAL = 3,144,252
 CURRENT_PATH = 236,150,255
+OPTIMAL_PATH = 3,144,252
